refactor: 사용자 티켓 목록 조회시 페이징 추가